modify security and JWT etc